Syncing sceg-directives.html from WordPress

--- a/sceg-directives.html
+++ b/sceg-directives.html
@@ -24,16 +24,16 @@ permalink: /sceg-directives/
 <p>The work of the S&amp;CEG shall be supervised by the TSC and is governed by the policies given in sections 2 and 3 of the O&amp;PM, and section 4 of the TSC Charter. The TSC shall appoint an Coordinator for the S&amp;CEG, and who shall be identified in annex A.1 of these Directives.</p>
 <p>The TSC shall maintain as annex A.1 of these Directives a list of members of the S&amp;CEG, which shall distinguish associate and transitional members. The TSC shall inform the S&amp;CEG Coordinator of changes to this list. The S&amp;CEG Coordinator is responsible for informing the TSC if in the S&amp;CEG Coordinators opinion a member lapses into or reverts from transitional status. If other formal roles are established in the S&amp;CEG, these shall be communicated to the TSC and identified in annex A.1.</p>
 <p>All members of the S&amp;CEG must abide by FHISO's Code of Conduct.</p>
-<h1 id="annex-a">Annex A</h1>
+<h1>Annex A</h1>
 <p>This annex contains supplementary information that is not formally part of the S&amp;CEG Directives but is appended to them for convenience.</p>
-<h2 id="a.1.-members">A.1. Members</h2>
+<h2>A.1. Members</h2>
 <ul>
 <li>Sue Adams (initial member and coordinator)</li>
 <li>Nick Hall (initial associate member)</li>
 <li>M. Diane Rogers (initial member)</li>
 <li>Richard Tallent (initial member)</li>
 </ul>
-<h2 id="a.2.-assigned-cfpss">A.2. Assigned CFPSs</h2>
+<h2>A.2. Assigned CFPSs</h2>
 <p>The S&amp;CEG has been assigned the following CFPS:</p>
 <ul>
 <li><a href="http://fhiso.org/files/cfp/cfps63.pdf">CFPS 63</a> Proposal for Handling Sources and Citations</li>
@@ -42,5 +42,5 @@ permalink: /sceg-directives/
 <li><a href="http://fhiso.org/files/cfp/cfps114.pdf">CFPS 114</a> Standardised Sources and Citation Templates</li>
 </ul>
 <p>Other CFPS may be relevant in whole or in part to the work of the S&amp;CEG; the S&amp;CEG is encouraged to consult such papers and respond as they deem appropriate.</p>
-<h2 id="a.3.-deliverables-produced">A.3. Deliverables produced</h2>
+<h2>A.3. Deliverables produced</h2>
 <p>The S&amp;CEG has not yet produced any deliverables.</p>
