Syncing tsc-egs.html from WordPress

--- a/tsc-egs.html
+++ b/tsc-egs.html
@@ -13,10 +13,10 @@ Non-members are welcome to participate in the work of these exploratory groups, 
 
 The first EGs have recently commenced work.  If you would like to participate in an open collaborative process to build consensus in these areas, the <a href="/tsc" title="Technical Standing Committee">TSC</a> would welcome your involvement on the EGs' mailing lists.
 
-<h3 id="core">Core Concepts Exploratory Group</h3>
+<h3 id="sources">Sources and Citations Exploratory Group</h3>
 <dl>
-<dt>Status</dt> <dd>Proposed by the TSC on 2014-08-15 and created on 2014-09-23.</dd>
-<dt>Mission</dt> <dd>To carry out exploratory work into the core genealogical concepts pertaining to persons, their intrinsic and extrinsic properties, the events in their lives, and the relationships they have with other persons.  [<a href="/cceg">See more&hellip;</a>]</dd>
+<dt>Status</dt> <dd>Proposed by the TSC on 2014-08-15 and created on 2015-04-10</dd>
+<dt>Mission</dt> <dd>To cary out exploratory work regarding data representation of information about and information contained within individual documents, monuments, artefacts, interviews, and other sources of data of interest to family history. [<a href="/sceg">See more&hellip;</a>]</dd>
 </dl>
 
 <h3 id="lex">Lexicon Exploratory Group</h3>
@@ -25,14 +25,11 @@ The first EGs have recently commenced work.  If you would like to participate in
 <dt>Mission</dt> <dd>To produce a lexicon of common usage and best practices for genealogical terminology in the English language.  [<a href="/lexeg">See more&hellip;</a>]</dd>
 </dl>
 
-<h3 id="sources">Sources and Citations Exploratory Group</h3>
+<h3 id="core">Core Concepts Exploratory Group</h3>
 <dl>
-<dt>Status</dt> <dd>Proposed by the TSC on 2014-08-15 and created on 2015-04-10</dd>
-<dt>Mission</dt> <dd>To cary out exploratory work regarding data representation of information about and information contained within individual documents, monuments, artefacts, interviews, and other sources of data of interest to family history. [<a href="/sceg">See more&hellip;</a>]</dd>
+<dt>Status</dt> <dd>Proposed by the TSC on 2014-08-15 and created on 2014-09-23.  Suspended as of 2015-06-19.</dd>
+<dt>Mission</dt> <dd>To carry out exploratory work into the core genealogical concepts pertaining to persons, their intrinsic and extrinsic properties, the events in their lives, and the relationships they have with other persons.  [<a href="/cceg">See more&hellip;</a>]</dd>
 </dl>
-
-
-
 
 <h2 id="proposed">Proposed exploratory groups</h2>
 
